Fix whitespace on edge of page

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     font-family: "Roboto", sans-serif;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
+    padding: 0px;
+    margin: 0;
 }
 
  .cta-button {
